[tool.poetry]
name = "policykit"
version = "0.1.2"
license = "Apache-2.0"
description = "A set of utilities and classes for working with Open Policy Agent based tools, including Gatekeeper and Conftest"
authors = ["Gareth Rushgrove <gareth@morethanseven.net>"]
readme = "README.md"
repository = "https://github.com/garethr/policykit"

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.1"
click = "^7.0"
colorama = "^0.4.1"
attrs = "^19.3"

[tool.poetry.scripts]
policykit = "policykit.cli:cli"
pk = "policykit.cli:cli"
kubectl-pk = "policykit.cli:cli"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-black = "^0.3.7"
pytest-isort = "^0.3.1"
pytest-mypy = "^0.4.1"
pytest-cov = "^2.8"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
